# sanbou_app

./: .dockerignore  .editorconfig  .gcloudignore  .gitattributes  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  FINAL_REFACTORING_REPORT.md  FSD_REFACTORING_SUMMARY.md  LEDGER_ERROR_HANDLING_IMPROVEMENT.md  MAKEFILE_QUICKREF.md  README.md  UKEIRE_REFACTOR_REPORT.md  debug.txt  debug_investigation_prompt.md  docker-compose.yml  makefile  pyproject.toml  ruff.toml  run_summary.txt  test_hook.txt  test_upload_flash.py  tmp_import_check.py
app/backend/backend_shared/: ERROR_HANDLING_GUIDE.md  README.md  pyproject.toml  test_integration.py
app/backend/backend_shared/config/: config_loader.py
app/backend/backend_shared/docs/: 20251128_CLEANUP_COMPLETE.md  20251128_ERROR_HANDLING_GUIDE.md  20251128_REFACTORING_REPORT.md  20251128_REFACTORING_SUMMARY.md  20251206_tree.txt  20251206_tree_final.txt  README.md  REFACTORING_REPORT_20251128.md
app/backend/backend_shared/src/api/: error_handlers.py
app/backend/backend_shared/src/api_response/: __init__.py
app/backend/backend_shared/src/backend_shared/: __init__.py
app/backend/backend_shared/src/csv_formatter/: formatter_base.py  formatter_factory.py  formatter_impls.py  type_parser_map.py
app/backend/backend_shared/src/csv_validator/: pure_csv_validator.py
app/backend/backend_shared/src/domain/: README.md
app/backend/backend_shared/src/utils/: csv_reader.py  dataframe_validator.py
app/backend/backend_shared/tests/: integration_test_shogun_fetcher.py  test_db_url_builder.py  test_shogun_fetcher.py  test_smoke.py
app/backend/core_api/: .dockerignore  .env.example  .importlinter  CLEAN_ARCHITECTURE_MIGRATION.md  Dockerfile  Dockerfile.bak.20251030_093302  README.md  alembic.ini  pyproject.toml  requirements.txt  tree.txt  tree_txt.txt
app/backend/core_api/app/: __init__.py  app.py  deps.py
app/backend/core_api/app/application/: __init__.py
app/backend/core_api/app/config/: __init__.py  di_providers.py  logging.py  settings.py
app/backend/core_api/app/domain/: __init__.py  inbound.py  models.py  rules.py  sales_tree.py  sales_tree_detail.py  shogun_flash_schemas.py
app/backend/core_api/app/infra/: __init__.py  db.py  http.py
app/backend/core_api/app/infra/db/: db.py  (+5 more)
app/backend/core_api/app/repositories/: __init__.py  core_repo.py  dynamic_models.py  forecast_query_repo.py  inbound_pg_repo.py  job_repo.py  orm_models.py  shogun_csv_repo.py  shogun_flash_debug_repo.py  sql_names.py
app/backend/core_api/app/routers/: calendar.py  chat.py  dashboard.py  database.py  external.py  forecast.py  ingest.py  kpi.py  reports.py
app/backend/core_api/app/scheduler/: notification_dispatcher.py
app/backend/core_api/app/services/: __init__.py  external_service.py  forecast_service.py  ingest_service.py  kpi_service.py  target_card_service.py
app/backend/core_api/app/shared/: __init__.py  exceptions.py  logging_utils.py
app/backend/core_api/docs/: 20251128_REFACTOR_COMPLETE_CLEAN_ARCHITECTURE.md  20251206_未実装エンドポイント一覧.md  README.md
app/backend/core_api/docs/api-implementation/: 20251117_MV_AUTO_REFRESH_IMPLEMENTATION_SUMMARY.md  20251117_MV_TARGET_CARD_IMPLEMENTATION.md  20251121_CUSTOMER_CHURN_ANALYSIS_REFACTORING.md  20251121_SALES_TREE_API_IMPLEMENTATION.md  20251121_VIEW_FIX_KING_NET_WEIGHT_DETAIL.md  20251127_MV_AUTO_REFRESH_IMPLEMENTATION_SUMMARY_20251117.md  20251127_MV_AUTO_REFRESH_ON_UPLOAD_MANUAL_TEST.md  20251127_MV_TARGET_CARD_IMPLEMENTATION_20251117.md  20251127_VIEW_FIX_KING_NET_WEIGHT_DETAIL_20251121.md
app/backend/core_api/docs/csv-processing/: 20251114_CSV_UPLOAD_ERROR_ANALYSIS.md  20251114_CSV_UPLOAD_ERROR_FIX.md  20251114_CSV_UPLOAD_STG_COLUMN_LOSS_REPORT.md  20251114_IMPLEMENTATION_SUMMARY_UPLOAD_TRACKING.md  20251114_総括レポート_将軍CSVアップロード検証.txt  20251118_CSV_ASYNC_UPLOAD_IMPLEMENTATION.md  20251118_CSV_VALIDATION_REFACTORING.md  20251127_CSV_UPLOAD_EMPTY_ROW_IMPLEMENTATION_20251114.txt  20251127_CSV_VALIDATION_REFACTORING_20251118.md  20251127_SHOGUN_CSV_UPLOAD_FILE_ID_TRACKING_IMPLEMENTATION.md
app/backend/core_api/docs/database/: 20251126_ALEMBIC_SQL_REFERENCE_SURVEY.md  20251127_BACKEND_FIELD_NAME_DICTIONARY.md  20251127_CUSTOMER_LIST_DB_DESIGN.txt  20251127_DATABASE_COLUMN_DICTIONARY.md  20251127_DB_UPGRADE_POSTGRES_15_TO_17.md  20251127_db_migration_policy.md  20251206_README_migrations.md  20251224_CLIENT_CD_NORMALIZATION.md  verify_client_cd_normalization.sql
app/backend/core_api/docs/legacy/: 20251006_IMPLEMENTATION_COMPLETE.md  20251027_CSV_UPLOAD_IMPLEMENTATION.md  20251027_YAML_FIRST_ARCHITECTURE.md  20251126_REPOSITORY_NAMING_CONVENTION.md
app/backend/core_api/docs/refactoring/: 20251114_COLUMN_CLEANUP_STEP1_REPORT.md  20251114_COLUMN_CLEANUP_STEP2_REPORT.md  20251114_COLUMN_CLEANUP_STEP3_REPORT.md  20251114_COLUMN_CLEANUP_STEP4_REPORT.md  20251114_COLUMN_CLEANUP_STEP5_REPORT.md  20251117_SQL_EXTRACTION_REFACTORING.md  20251127_COLUMN_CLEANUP_STEP1_REPORT_20251114.md  20251127_COLUMN_CLEANUP_STEP2_REPORT_20251114.md  20251127_COLUMN_CLEANUP_STEP4_REPORT_20251114.md
app/backend/core_api/docs/reports/: 20251114_RAW_DATA_SAVE_FAILURE_ANALYSIS.md  20251114_RAW_SHOGUN_FLASH_EMPTY_ANALYSIS.md  20251114_RAW_SHOGUN_FLASH_FIX_COMPLETE.md  (+1 more)
app/backend/core_api/migrations/: alembic.ini  env_legacy.py
app/backend/core_api/migrations_legacy/: alembic.ini
app/backend/core_api/migrations_v2/: README.md  alembic.ini
app/backend/core_api/tests/: manual_notification_demo.py  test_inbound_daily.py  test_mv_refresh.py  test_notification_infrastructure.py  test_shogun_flash_schemas.py
app/backend/forecast_worker/: Dockerfile  README.md  pyproject.toml  requirements.txt
app/backend/forecast_worker/app/: worker.py
app/backend/forecast_worker/domain/: predictor.py
app/backend/forecast_worker/infra/: db.py
app/backend/plan_worker/: Dockerfile  Dockerfile.bak.20251030_093302  README.md  pyproject.toml  requirements.txt
app/backend/plan_worker/app/: __init__.py  main.py
app/backend/plan_worker/docs/: README.md
app/backend/plan_worker/infra/: db.py
(+3831 files in other folders)
