[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project]
name = "backend-shared"
version = "0.1.0"
description = "Shared utilities for our FastAPI services (Clean Architecture/SOLID)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Team" }]
dependencies = [
  "pydantic==2.10.3",
  "pydantic-settings==2.10.1",
  "typing-extensions==4.15.0",
  "fastapi>=0.115.7,<0.200.0",
  "starlette>=0.49.1",
  "pyyaml==6.0.2",
  "pandas==2.2.3",
  "SQLAlchemy==2.0.36",
  "asyncpg==0.30.0",
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine", "python-dotenv"]

[tool.hatch.build]
exclude = [
  "/tests",
  "*/__pycache__/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend_shared"]
