[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-api"
version = "1.0.0"
description = "BFF/Facade API for frontend - handles short sync calls and job queuing"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "pydantic-settings==2.10.1",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "alembic==1.14.0",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "python-dateutil==2.9.0.post0",
    "python-json-logger==3.2.1",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
    "pyyaml==6.0.2",
    "backend-shared @ file:///backend/backend_shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "pyright>=1.1.0",
    "import-linter>=2.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C90", # mccabe (complexity)
]
ignore = [
    "E402",  # Module level import not at top of file - used for dependency injection
    "E501",  # Line too long - handled by black
    "F401",  # Unused import - some imports are for re-export
    "B008",  # FastAPI Depends() in defaults is standard pattern
    "B904",  # raise from is not required in all cases
    "B905",  # zip() without explicit strict - Python 3.11+ only
    "C901",  # Complex function - some business logic is inherently complex
    "N806",  # Variable name should be lowercase - some uppercase is intentional (e.g., DynamicModel)
    "UP045", # Optional[X] vs X | None - both styles are acceptable
]

[tool.ruff.lint.isort]
known-first-party = ["app", "backend_shared"]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pyright]
include = ["app"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "migrations",
]
pythonVersion = "3.11"
typeCheckingMode = "basic"  # "basic" | "standard" | "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportDuplicateImport = true

# ============================================================
# mypy: 段階的型チェック導入（ゆるい設定から開始）
# ============================================================
# 方針:
# - 初回は対象を限定（core/, api/ のみ）
# - strict は無効化（段階的に厳格化）
# - 外部ライブラリで詰まらないよう ignore_missing_imports = true
# - 徐々に disallow_untyped_defs 等を追加していく
#
# 実行: make typecheck
# ============================================================
[tool.mypy]
python_version = "3.11"
# 段階導入のため strict は無効化（将来的に有効化を検討）
strict = false

# 基本的な警告（負荷が低い）
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true

# 外部ライブラリで詰まらないように
ignore_missing_imports = true

# 最初は緩く（将来的に true にする）
check_untyped_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_incomplete_defs = false

# ファイル単位で除外（段階導入）
# 最初は core/ と api/ のみチェック対象
# infra/ や config/ は後回し
exclude = [
    "^app/infra/",
    "^app/config/",
    "^app/scheduler/",
    "migrations/",
]

[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "Layered architecture"
type = "layers"
layers = [
  "app.presentation",
  "app.application",
  "app.domain"
]

[[tool.importlinter.contracts]]
name = "No infra import from inner layers"
type = "forbidden"
source_modules = ["app.presentation", "app.application", "app.domain"]
forbidden_modules = ["app.infra"]
