[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecast-worker"
version = "1.0.0"
description = "Background worker for forecast job execution"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2.1",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
]

[tool.black]
line-length = 100
target-version = ["py311"]
